	  except for aeros, vtols and DSes.  Basicly negates any
	  rolls or affects that water has on a unit although
	  the units will still slow down in water. (Dany)
	* Added Coolant Guns. (Dany)
	* Added 'vector' command. (Power_Shaper)
	* Changed tacheight to tacsize. (Dany)
	* Added Exile's head hit stun code.  Can be turned on/off using the
	  mudconf parameter 'btech_exile_stun_code'. (Dany)

	- Bugfixes
	* Fixed mistiming in weapon recycling code. (Martin Murray)
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)
	* Fixes for embark and udisembark. (Dany)
	* Fixes to the configure system. (Dany)
	* btsetpartcost() corrected negative cost error check. (George Ponick)
	* btdamagemech() total damage limited to 1000 to prevent runaway loop. (George Ponick)
	* Fixed bttechlist() to prevent that FUSTAG bug. (Greg Taylor)
	* Fix for bug #1321731.  Masc code more in line with FASA
	  now and should destroy all the hips as well as
	  set the max speed to zero, fixing any weirdness
	  that was occuring when the unit took another leg crit. (Dany)
	* Fix for bug #1324084 - Stealth Armor.  Fix so when you
	  repair the armor on a stealth armor unit, it uses STH_Armor
	  parts instead of 'Internals' (which is wrong). (Dany)
	* Added some rounding for the Trigger mine distance calcs
	  because of ranges being generated like 1.000072 messing
	  with it. (Dany)
	* Movement mode contact flags now appear as intended. (Power_Shaper)
	* Maneuvering ace now gets the proper turning bonus. (John FitzSimons)
	* Patch to keep exploding units that aren't on maps
	  from crashing the MUX. (Dany)
	* Patch to keep units set CritProof_Tech from getting crits. (Dany)